bin/tests/snapshots/inherit_blank_line__d7e4157dcc44c24d04fde2a430b38524_lint_stderr.snap
---
source: bin/tests/inherit_blank_line.rs
---
{
  inherit system;
  owner = "me";
  inherit name;
  paths = [ ];
}
---
[inherit_blank_line] Warning: No blank line after `inherit`
   ╭─[ <temp_file_path>:3:3 ]
   │
 3 │   owner = "me";
   │   ──────┬──────  
   │         ╰──────── a blank line should follow the inherit above
───╯
