bin/tests/snapshots/inherit_blank_line__fa38d8b5c9c1bfd6d105e46d68412ac4_fix.snap
---
source: bin/tests/inherit_blank_line.rs
---
{
  inherit system;
  # where the code lives
  owner = "me";
}
---
--- <temp_file_path>
+++ <temp_file_path> [fixed]
@@ -1,5 +1,6 @@
 {
   inherit system;
+
   # where the code lives
   owner = "me";
 }
