bin/tests/snapshots/inherit_blank_line__fa38d8b5c9c1bfd6d105e46d68412ac4_lint_errfmt.snap
---
source: bin/tests/inherit_blank_line.rs
---
{
  inherit system;
  # where the code lives
  owner = "me";
}
---
<temp_file_path>>4:3:W:36:[inherit_blank_line] a blank line should follow the `inherit` above
