bin/tests/snapshots/inherit_blank_line__fa38d8b5c9c1bfd6d105e46d68412ac4_lint_json.snap
---
source: bin/tests/inherit_blank_line.rs
---
{
  inherit system;
  # where the code lives
  owner = "me";
}
---
{
  "file": "<temp_file_path>",
  "report": [
    {
      "name": "inherit_blank_line",
      "note": "No blank line after `inherit`",
      "code": 36,
      "severity": "Warn",
      "diagnostics": [
        {
          "at": {
            "from": {
              "line": 4,
              "column": 3
            },
            "to": {
              "line": 4,
              "column": 16
            }
          },
          "message": "a blank line should follow the `inherit` above",
          "suggestion": {
            "at": {
              "from": {
                "line": 1,
                "column": 1
              },
              "to": {
                "line": 5,
                "column": 2
              }
            },
            "fix": "{\n  inherit system;\n\n  # where the code lives\n  owner = \"me\";\n}"
          }
        }
      ]
    }
  ]
}
